# restack

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  sitemap.xml
deployment/: docker-compose.yaml
deployment/azurepipelines/: restack-api-arm.yml  restack-api.yml  restack-docs.yml  restack-pypi.yml  restack-web-arm.yml  restack-web.yml
docs/: 404.html  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
docs/docs/: feedback.md  index.md  license.md
docs/docs/guides/: create-stack.md
docs/feedback/: index.html
docs/getting-started/: index.html
docs/guides/create-ssh-key/: index.html
docs/guides/create-stack/: index.html
docs/guides/installation/: index.html
docs/license/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
feedback/: index.html
getting-started/: index.html
guides/create-ssh-key/: index.html
guides/create-stack/: index.html
guides/installation/: index.html
license/: index.html
search/: search_index.json
src/docs/: mkdocs.yml
src/docs/docs/: getting-started.md  index.md
src/dotnet/: .editorconfig  ReStack.sln  package-lock.json
src/dotnet/ReStack.Api/: Dockerfile  Program.cs  (+4 more)
src/home_assistant/: __init__.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  utils.py
src/python/: README.md  requirements.txt  setup.cfg
src/python/pyrestack/: __init__.py  const.py  decorator.py  exceptions.py  models.py  restack.py  restack_client.py
src/python/pyrestack-api/: __init__.py  restack_client.py
src/python/tests/: testscript.py
stylesheets/: extra.css
(+275 files in other folders)
