[metadata]
name = pyrestack
version = 0.1.2
author = Floris Heyvaert
author_email = floris.heyvaert@gmail.com
url = https://github.com/restack-project/restack
description = Python wrapper for ReStack API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pyrestack, setuptools
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.12.0
install_requires =
    aiohttp>=3.8.2,<4.0
    prometheus-client>=0.14.1
    aiodns>=3.0.0

[options.extras_require]
dev =
    black==22.3.0
    isort==5.10.1

[options.package_data]
* = README.md

[isort]
profile = black